--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>Currency Converter</header>
+        <header>แปลงสกุลเงิน</header>
         <form action="#">
             <div class="amount">
-                <p>Enter Amount</p>
+                <p>ระบุจำนวนเงิน</p>
                 <input id="amount" type="number" step="0.01" value="">
             </div>
             <div class="drop-list">
                 <div class="from">
-                    <p>From</p>
+                    <p>แปลงจาก</p>
                     <div class="select-box">
                         <select id="from"></select>
                     </div>
                 </div>
                 <div class="icon"><i class="fa-solid fa-arrow-right-arrow-left" id="btn-swap"></i></div>
                 <div class="to">
-                    <p>To</p>
+                    <p>ไปเป็น</p>
                     <div class="select-box">
                         <select id="to"></select>
                     </div>
